# my_page_scraped

./: andycode.csv  main.py  pyproject.toml
web_data/: andycode_1.html
